--- a/.readme_template.md
+++ b/.readme_template.md
@@ -1,30 +1,27 @@
 
-[![tests](https://github.com/ghga-de/ghga-validator/actions/workflows/unit_and_int_tests.yaml/badge.svg)](https://github.com/ghga-de/ghga-validator/actions/workflows/unit_and_int_tests.yaml)
-[![Coverage Status](https://coveralls.io/repos/github/ghga-de/ghga-validator/badge.svg?branch=main)](https://coveralls.io/github/ghga-de/ghga-validator?branch=main)
+[![tests](https://github.com/ghga-de/$name/actions/workflows/unit_and_int_tests.yaml/badge.svg)](https://github.com/ghga-de/$name/actions/workflows/unit_and_int_tests.yaml)
+[![Coverage Status](https://coveralls.io/repos/github/ghga-de/$name/badge.svg?branch=main)](https://coveralls.io/github/ghga-de/$name?branch=main)
 
-# Ghga Validator
+# $title
 
-GHGA Validator
+$summary
 
 ## Description
 
-<!-- Please provide a short overview of the features of this service.-->
-
-CLI Tool for validation of the GHGA metadata.
-
+$description
 
 ## Installation
 We recommend using the provided Docker container.
 
-A pre-build version is available at [docker hub](https://hub.docker.com/repository/docker/ghga/ghga-validator):
+A pre-build version is available at [docker hub](https://hub.docker.com/repository/docker/ghga/$name):
 ```bash
-docker pull ghga/ghga-validator:1.0.0
+docker pull ghga/$name:$version
 ```
 
 Or you can build the container yourself from the [`./Dockerfile`](./Dockerfile):
 ```bash
 # Execute in the repo's root dir:
-docker build -t ghga/ghga-validator:1.0.0 .
+docker build -t ghga/$name:$version .
 ```
 
 For production-ready deployment, we recommend using Kubernetes, however,
@@ -32,7 +29,7 @@ for simple use cases, you could execute the service using docker
 on a single server:
 ```bash
 # The entrypoint is preconfigured:
-docker run -p 8080:8080 ghga/ghga-validator:1.0.0 --help
+docker run -p 8080:8080 ghga/$name:$version --help
 ```
 
 If you prefer not to use containers, you may install the service from source:
@@ -41,22 +38,22 @@ If you prefer not to use containers, you may install the service from source:
 pip install .
 
 # To run the service:
-ghga_validator --help
+$shortname --help
 ```
 
 ## Configuration
 ### Parameters
 
 The service requires the following configuration parameters:
-
+$config_description
 
 ### Usage:
 
 A template YAML for configurating the service can be found at
 [`./example-config.yaml`](./example-config.yaml).
-Please adapt it, rename it to `.ghga_validator.yaml`, and place it into one of the following locations:
-- in the current working directory were you are execute the service (on unix: `./.ghga_validator.yaml`)
-- in your home directory (on unix: `~/.ghga_validator.yaml`)
+Please adapt it, rename it to `.$shortname.yaml`, and place it into one of the following locations:
+- in the current working directory were you are execute the service (on unix: `./.$shortname.yaml`)
+- in your home directory (on unix: `~/.$shortname.yaml`)
 
 The config yaml will be automatically parsed by the service.
 
@@ -65,8 +62,8 @@ The config yaml will be automatically parsed by the service.
 All parameters mentioned in the [`./example-config.yaml`](./example-config.yaml)
 could also be set using environment variables or file secrets.
 
-For naming the environment variables, just prefix the parameter name with `ghga_validator_`,
-e.g. for the `host` set an environment variable named `ghga_validator_host`
+For naming the environment variables, just prefix the parameter name with `${shortname}_`,
+e.g. for the `host` set an environment variable named `${shortname}_host`
 (you may use both upper or lower cases, however, it is standard to define all env
 variables in upper cases).
 
@@ -74,18 +71,10 @@ To using file secrets please refer to the
 [corresponding section](https://pydantic-docs.helpmanual.io/usage/settings/#secret-support)
 of the pydantic documentation.
 
-## HTTP API
-An OpenAPI specification for this service can be found [here](./openapi.yaml).
+$openapi_doc
 
 ## Architecture and Design:
-<!-- Please provide an overview of the architecture and design of the code base.
-Mention anything that deviates from the standard triple hexagonal architecture and
-the corresponding structure. -->
-
-This is a Python-based service following the Triple Hexagonal Architecture pattern.
-It uses protocol/provider pairs and dependency injection mechanisms provided by the
-[hexkit](https://github.com/ghga-de/hexkit) library.
-
+$design_description
 
 ## Development
 For setting up the development environment, we rely on the
