Polish CLI and docs

--- a/.description.md
+++ b/.description.md
@@ -1,3 +1,5 @@
 <!-- Please provide a short overview of the features of this service.-->
 
-CLI Tool for validation of the GHGA metadata.
+ghga-validator is a Python library and command line utility to validate metadata
+w.r.t. its compliance to the [GHGA Metadata
+Model](github.com/ghga-de/ghga-metadata-schema). It takes metadata encoded in JSON of YAML format and produces a validation report in JSON format.
